@@ -66,6 +66,10 @@ NEWS
   ``paste.util.multidict``, particularly in ``paste.wsgiwrappers``
   where ``request.GET`` returns a new style of dictionary interface.
 
+* Be more careful in ``paste.request.parse_formvars`` not to let 
+  the ``cgi`` module read from ``wsgi.input`` when there are no
+  parsable variables in the input (based on ``CONTENT_TYPE``).
+
 0.9.3
 -----
 
